# light-field-renderer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  blender-exporter.py
light-fields/shop/: config.cfg
source/: application.cpp  application.hpp  camera-array.cpp  camera-array.hpp  config.cpp  config.hpp  constants.hpp  fbo.cpp  fbo.hpp  light-field-renderer.cpp  light-field-renderer.hpp  main.cpp  quad.cpp  quad.hpp  shader.cpp  shader.hpp
source/core/: application.cpp  application.hpp  camera-array.cpp  camera-array.hpp  config.cpp  config.hpp  light-field-renderer.cpp  light-field-renderer.hpp  phase-detect-autofocus.cpp  phase-detection-autofocus.cpp  property-box-row.cpp  property-slider.cpp  util.hpp
source/gl-util/: fbo.cpp  fbo.hpp  n-sided-polygon.cpp  n-sided-polygon.hpp  quad.cpp  quad.hpp  shader.cpp  shader.hpp
source/shaders/: autofocus.frag  autofocus.vert  data-camera-projections.vert  light-field-renderer.frag  light-field-renderer.vert  normalize-aperture-filters.frag  normalize-aperture-weights.frag  screen.vert  template-match.frag
source/shaders/autofocus/: debug.frag  disparity.frag  disparity.vert  draw-disparity.frag  phase.frag  phase.vert  template-match.frag  visualize-autofocus.frag
